# art

./: .gitignore  Cargo.toml  Makefile  Readme.md  index.html
assets/shaders/: fractal.wgsl  phong.wgsl
boids/: Cargo.toml  Makefile  index.html
boids/assets/shaders/sdf/: lib.wgsl  mandelbulb.wgsl
boids/pkg/: boids.js
boids/src/: lib.rs  main.rs
fractal/: Cargo.toml  Makefile  index.html
fractal/assets/shaders/: bevy_utils.wgsl  fractal.wgsl  phong.wgsl
fractal/pkg/: fractal.js
fractal/src/: fractal_plugin.rs  lib.rs  main.rs  pan_orbit_camera.rs
origami/: Cargo.toml  Makefile  Readme.md  index.html
origami/pkg/: origami.js
origami/src/: lib.rs  main.rs
pkg/: art.js
shared/: Cargo.toml
shared/src/: pan_orbit_camera.rs
src/: fractal_plugin.rs  lib.rs  main.rs  pan_orbit_camera.rs
