[workspace]
resolver = "2"

members = [
"fractal",
"origami",
]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
#opt-level = 1
split-debuginfo = "unpacked"