[package]
name = "shared"
version = "0.0.1"
authors = ["Dylan"]
edition = "2021"

[dependencies]
log = "0.4"

bevy = { version = "0.6", default-features = false, features = [
    "bevy_audio",
    # "bevy_gilrs", doesn't work for Firefox
    "bevy_winit",
    "render",
    # "png",
    "hdr",
    # "vorbis",
    "x11",
    "filesystem_watcher"
] }